--- a/app/index.html
+++ b/app/index.html
@@ -22,41 +22,27 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
     <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-
-            <a class="navbar-brand" href="http://www.mass.gov/eea/grants-and-tech-assistance/guidance-technical-assistance/agencies-and-divisions/doer/" target="_blank">eeaDoer</a>
+          <div class="color-band"></div>
+            <a href="http://www.mass.gov/eea/grants-and-tech-assistance/guidance-technical-assistance/agencies-and-divisions/doer/" target="_blank"><img class="img-responsive logo" src="images/DOER_JPEG_300dpi.jpg" alt="DOER logo"></a>
+           
+          <div class="menu-right">
+            <a class="menu-link" href="#/">Home |</a>
+            <a class="menu-link" ng-href="#/glosary">&nbsp;glosary</a>
           </div>
-
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">glosary</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
+    </div>
+      
     </div>
 
     <div class="container">
     <div ng-view=""></div>
     </div>
 
+
     <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+      <div class="nested-footer">
+        <p><span class="glyphicon glyphicon-copyright-mark"></span> 2014 Commonwealth of Massachussetts.<br>
+        Mass.Gov <span class="glyphicon glyphicon-registration-mark"></span> is a registered service mark of the Commonwealth of Massachusetts</p>
       </div>
     </div>
 
@@ -71,8 +57,6 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.6/d3.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/c3/0.4.5/c3.min.js"></script>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
