--- a/app/index.html
+++ b/app/index.html
@@ -24,11 +24,13 @@
 
     <div class="header">
           <div class="color-band"></div>
+          <div class="mini-head">
             <a href="http://www.mass.gov/eea/grants-and-tech-assistance/guidance-technical-assistance/agencies-and-divisions/doer/" target="_blank"><img class="img-responsive logo" src="images/DOER_JPEG_300dpi.jpg" alt="DOER logo"></a>
            
-          <div class="menu-right">
-            <a class="menu-link" href="#/">Home |</a>
-            <a class="menu-link" ng-href="#/glosary">&nbsp;glosary</a>
+            <div class="menu">
+              <a class="menu-link" href="#/">Home |</a>
+              <a class="menu-link" ng-href="#/glosary">&nbsp;glosary</a>
+            </div>
           </div>
     </div>
       
