--- a/app/index.html
+++ b/app/index.html
@@ -28,13 +28,12 @@
             <a href="http://www.mass.gov/eea/grants-and-tech-assistance/guidance-technical-assistance/agencies-and-divisions/doer/" target="_blank"><img class="img-responsive logo" src="images/DOER_JPEG_300dpi.jpg" alt="DOER logo"></a>
            
             <div class="menu">
-              <a class="menu-link" href="#/">Home |</a>
-              <a class="menu-link" ng-href="#/glosary">&nbsp;glosary</a>
+              <a class="menu-link" href="#/">Home</a><span>&nbsp;|</span>
+              <a class="menu-link" ng-href="#/glosary">Glosary</a>
             </div>
           </div>
     </div>
       
-    </div>
 
     <div class="container">
     <div ng-view=""></div>
@@ -74,6 +73,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/tabletop/src/tabletop.js"></script>
     <script src="bower_components/angular-tabletop/TabletopProvider.js"></script>
+    <script src="bower_components/angular-filter/dist/angular-filter.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
